--- a/book_list/index.html
+++ b/book_list/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Book List</title>
+    <link rel="stylesheet" href="index.css">
     <script defer src="books.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu_book" />
 </head>
+
 <body>
-    
+    <div class="books">
+        <div class="heading">
+            <span class="material-symbols-outlined">
+                menu_book
+                </span>  <h1>My <span>Book</span> List</h1>
+        </div>
+    </div>
 </body>
 </html>
