--- a/book_list/index.html
+++ b/book_list/index.html
@@ -6,17 +6,14 @@
     <title>My Book List</title>
     <link rel="stylesheet" href="index.css" />
     <script defer src="books.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu_book"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=two_pager" />
   </head>
 
   <body>
     <div class="books">
       <div class="heading">
         <span class="material-symbols-outlined" style="font-size: 48px">
-          menu_book
+          two_pager
         </span>
         <h1>My <span>Book</span> List</h1>
       </div>
@@ -31,6 +28,8 @@
           <input type="text" name="" id="" placeholder="Your Book ISBN" />
           <button>Add Book</button>
         </form>
+
+        <hr />
 
         <div class="book-list">
           <table>
