Update input placeholders and adjust margin for better spacing in book input form

--- a/book_list/index.html
+++ b/book_list/index.html
@@ -21,11 +21,11 @@
       <div class="book-container bookInput">
         <form class="bookInput" action="">
           <label for="">Title</label>
-          <input type="text" name="" id="" placeholder="Book Title" />
+          <input type="text" name="" id="" placeholder="The Title Of The Book" />
           <label for="">Author</label>
-          <input type="text" name="" id="" placeholder="The Book Author" />
+          <input type="text" name="" id="" placeholder="The Name Of The Author" />
           <label for="">ISBN</label>
-          <input type="text" name="" id="" placeholder="Your Book ISBN" />
+          <input type="text" name="" id="" placeholder="The Book ISBN Numner" />
           <button>Add Book</button>
         </form>
 
