Added comments to HTML structure for better readability

--- a/book_list/index.html
+++ b/book_list/index.html
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+
+    // Book Container
     <div class="books">
       <div class="heading">
         <span class="material-symbols-outlined" style="font-size: 48px">
@@ -18,6 +20,7 @@
         <h1>My <span>Book</span> List</h1>
       </div>
 
+      // Book Input Container
       <div class="book-container bookInput">
         <form class="bookInput" action="">
           <label for="">Title</label>
@@ -31,6 +34,7 @@
 
         <hr />
 
+        // Book List Container 
         <div class="book-list">
           <table>
             <thead>
