Replace JavaScript-style comments with HTML comments for better clarity in index.html

--- a/book_list/index.html
+++ b/book_list/index.html
@@ -11,7 +11,7 @@
 
   <body>
 
-    // Book Container
+    <!-- Book Container -->
     <div class="books">
       <div class="heading">
         <span class="material-symbols-outlined" style="font-size: 48px">
@@ -20,7 +20,7 @@
         <h1>My <span>Book</span> List</h1>
       </div>
 
-      // Book Input Container
+       <!-- Book Input Container -->
       <div class="book-container bookInput">
         <form class="bookInput" action="">
           <label for="">Title</label>
@@ -34,7 +34,7 @@
 
         <hr />
 
-        // Book List Container 
+        <!-- Book List Container  -->
         <div class="book-list">
           <table>
             <thead>
