--- a/book_list/index.html
+++ b/book_list/index.html
@@ -23,12 +23,12 @@
        <!-- Book Input Container -->
       <div class="book-container bookInput">
         <form class="bookInput" action="">
-          <label for="">Title</label>
-          <input type="text" name="" id="" placeholder="The Title Of The Book" />
-          <label for="">Author</label>
-          <input type="text" name="" id="" placeholder="The Name Of The Author" />
-          <label for="">ISBN</label>
-          <input type="text" name="" id="" placeholder="The Book ISBN Numner" />
+          <label for="title">Title</label>
+          <input type="text" name="" id="title" placeholder="The Title Of The Book" />
+          <label for="author">Author</label>
+          <input type="text" name="" id="author" placeholder="The Name Of The Author" />
+          <label for="isbn">ISBN</label>
+          <input type="text" name="" id="isbn" placeholder="The Book ISBN Numner" />
           <button>Add Book</button>
         </form>
 
