Refactor book list UI: Update button type for form submission, adjust minimum width for responsiveness, and add comments for clarity in JavaScript

--- a/book_list/index.html
+++ b/book_list/index.html
@@ -29,7 +29,7 @@
           <input type="text" name="" id="author" placeholder="The Name Of The Author" />
           <label for="isbn">ISBN</label>
           <input type="text" name="" id="isbn" placeholder="The Book ISBN Numner" />
-          <button>Add Book</button>
+          <button type="submit">Add Book</button>
         </form>
 
         <hr />
