Fix typo in ISBN placeholder and format code for consistency in displayBooks method

--- a/book_list/index.html
+++ b/book_list/index.html
@@ -28,7 +28,7 @@
           <label for="author">Author</label>
           <input type="text" name="" id="author" placeholder="The Name Of The Author" />
           <label for="isbn">ISBN</label>
-          <input type="text" name="" id="isbn" placeholder="The Book ISBN Numner" />
+          <input type="text" name="" id="isbn" placeholder="The Book ISBN Number" />
           <button type="submit">Add Book</button>
         </form>
 
