Implemented book list display functionality in UI class and update HTML structure

--- a/book_list/index.html
+++ b/book_list/index.html
@@ -35,7 +35,7 @@
         <hr />
 
         <!-- Book List Container  -->
-        <div class="book-list">
+        <div class="book-list" id="book-list">
           <table>
             <thead>
               <tr>
