--- a/book_list/index.html
+++ b/book_list/index.html
@@ -22,7 +22,7 @@
 
        <!-- Book Input Container -->
       <div class="book-container bookInput">
-        <form class="bookInput" action="">
+        <form class="bookInput" id="bookInput" action="">
           <label for="title">Title</label>
           <input type="text" name="" id="title" placeholder="The Title Of The Book" />
           <label for="author">Author</label>
