--- a/book_list/index.html
+++ b/book_list/index.html
@@ -42,7 +42,7 @@
                 <th>Title</th>
                 <th>Author</th>
                 <th>ISBN#</th>
-                <th></th>
+                <th>Action</th>
               </tr>
             </thead>
           </table>
