Update quiz app layout and styles: modify background color, enhance button styles, and add a "Next" button

--- a/quiz_app/index.html
+++ b/quiz_app/index.html
@@ -1,37 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="script.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>Quiz App</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <div class="container">
-        <h1>Quiz App</h1>
-        <hr>
-        <div class="quiz">
-            <h3 id="question"> Questions Appear Here</h3>
-            <div class="answers" id="answers">
-                <button class="btn" id="btn0">Answer 1</button>
-                <button class="btn" id="btn1">Answer 2</button>
-                <button class="btn" id="btn2">Answer 3</button>
-                <button class="btn" id="btn3">Answer 4</button>
-            </div>
+      <h1>Quiz App</h1>
+      <hr />
+      <div class="quiz">
+        <h3 id="question">Questions Appear Here</h3>
+        <div class="answers" id="answers">
+          <button class="btn" id="btn0">Answer 1</button>
+          <button class="btn" id="btn1">Answer 2</button>
+          <button class="btn" id="btn2">Answer 3</button>
+          <button class="btn" id="btn3">Answer 4</button>
         </div>
-    </div>
-   
-   
-   
-   
-   
-   
-   
 
-   
-   
-    
-</body>
+        <button id="next">Next</button>
+      </div>
+    </div>
+  </body>
 </html>
