Add input field and button for temperature conversion in the app

--- a/temp-converter/index.html
+++ b/temp-converter/index.html
@@ -10,6 +10,8 @@
 <body>
     <div class="container">
         <h2>Temperature Converter</h2>
+        <input type="text" name="" id="celsius" placeholder="Enter Temperature">
+        <button>Convert</button>
     </div>
 </body>
 </html>
