Add results paragraph to display conversion output in temperature converter

--- a/temp-converter/index.html
+++ b/temp-converter/index.html
@@ -12,6 +12,7 @@
         <h2>Temperature Converter</h2>
         <input type="text" name="" id="celsius" placeholder="Enter Temperature">
         <button>Convert</button>
+        <p id="results"></p>
     </div>
 </body>
 </html>
