Refactor results display in temperature converter and enhance styling

--- a/temp-converter/index.html
+++ b/temp-converter/index.html
@@ -12,7 +12,11 @@
         <h2>Temperature Converter</h2>
         <input type="text" name="" id="celsius" placeholder="Enter Temperature">
         <button>Convert</button>
-        <p id="results"></p>
+        <div class="results">
+            <span>Results</span>
+<p id="results"></p>
+        </div>
+        
     </div>
 </body>
 </html>
