--- a/temp-converter/index.html
+++ b/temp-converter/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Temperature Converter</title>
     <script defer src="script.js"></script>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="container">
-        <h2>Temperature Converter</h2>
-        <input type="text" name="" id="celsius" placeholder="Enter Temperature">
-        <button>Convert</button>
-        <div class="results">
-            <span>Results</span>
-<p id="results"></p>
-        </div>
-        
+      <h2>Temperature Converter</h2>
+      <input type="text" name="" id="celsius" placeholder="Enter Temperature" />
+      <button>Convert</button>
+      <div class="results">
+        <span>Results</span>
+        <p id="results"></p>
+      </div>
     </div>
-</body>
+  </body>
 </html>
