Add conversion output display for Fahrenheit in temperature converter

--- a/temp-converter/index.html
+++ b/temp-converter/index.html
@@ -11,9 +11,9 @@
     <div class="container">
       <h2>Temperature Converter</h2>
       <input type="text" name="" id="celsius" placeholder="Enter Temperature" />
-      <button>Convert</button>
+      <button onclick="convert()">Convert</button>
       <div class="results">
-        <span>Results</span>
+        <span>Temperature in Fahrenheit:</span>
         <p id="results"></p>
       </div>
     </div>
