Added container and elements for quote display in random quotes generator

--- a/random-qoutes/index.html
+++ b/random-qoutes/index.html
@@ -8,6 +8,11 @@
     <title>Random Quotes Generator</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h2>Random Quotes Generator</h2>
+        <button>Get Quote</button>
+        <p>Results</p>
+        <p id="quote"></p>
+    </div>
 </body>
 </html>
