Added results section and improved button styles for random quotes generator

--- a/random-qoutes/index.html
+++ b/random-qoutes/index.html
@@ -11,8 +11,12 @@
     <div class="container">
         <h2>Random Quotes Generator</h2>
         <button>Get Quote</button>
+        <hr>
+       <div class="results">
         <p>Results</p>
         <p id="quote"></p>
+       </div>
+       
     </div>
 </body>
 </html>
