Implement fetch call in getQuote function to retrieve random quotes

--- a/random-qoutes/index.html
+++ b/random-qoutes/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h2>Random Quotes Generator</h2>
-        <button>Get Quote</button>
+        <button onclick="getQuote()">Get Quote</button>
         <hr>
        <div class="results">
         <p>Results</p>
