Add input fields and buttons for basic calculator functionality

--- a/basic-calculator/index.html
+++ b/basic-calculator/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="input">
+            <input id="num1" type="number" placeholder="Number 1">
+            <input id="num2" type="number" placeholder="Number 2">
+        </div>
+            <button id="add">+</button>
+            <button id="divide">/</button>
+            <button id="subscript">-</button>
+            <button id="multiply">*</button>
+        <div class="calculators">
+
+        </div>
+    </div>
 </body>
 </html>
