Add event handlers for calculator operations and fix button IDs

--- a/basic-calculator/index.html
+++ b/basic-calculator/index.html
@@ -15,10 +15,10 @@
       </div>
 
       <div class="operators">
-        <button id="add">+</button>
-        <button id="divide">/</button>
-        <button id="subscript">-</button>
-        <button id="multiply">*</button>
+        <button id="add onClick="add()">+</button>
+        <button id="devide" onClick="devide()">/</button>
+        <button id="substact" onClick="substact()">-</button>
+        <button id="multiply" onClick="multiply()">*</button>
       </div>
     </div>
 
