Fix button IDs and enhance operation functions for calculator

--- a/basic-calculator/index.html
+++ b/basic-calculator/index.html
@@ -15,13 +15,13 @@
       </div>
 
       <div class="operators">
-        <button id="add onClick="add()">+</button>
-        <button id="devide" onClick="devide()">/</button>
-        <button id="substact" onClick="substact()">-</button>
-        <button id="multiply" onClick="multiply()">*</button>
+        <button class="operation" id="add" onClick="add()">+</button>
+        <button class="operation" id="divide" onClick="devide()">/</button>
+        <button class="operation" id="subtract" onClick="substact()">-</button>
+        <button class="operation" id="multiply" onClick="multiply()">*</button>
       </div>
     </div>
 
-    <div class="results">Results: <span id="results"></span></div>
+    <div class="results">Results: <span id="result"></span></div>
   </body>
 </html>
