--- a/drum_kit/index.html
+++ b/drum_kit/index.html
@@ -34,7 +34,9 @@
         }
 
         button{
-            padding: 15px 10px;
+            display: flex;
+            flex-direction: column;
+            padding:5px;
             min-width: 100px;
             height: auto;
             background-color: #50a700 ;
@@ -44,6 +46,12 @@
             font-weight: 600;
             font-size: large;
             
+        }
+
+        span{
+            font-weight: 100;
+            font-size: small;
+            color: #000;
         }
 
         button:hover{
@@ -58,15 +66,53 @@
 </head>
 <body>
     <div class="container">
-        <button class="btn-key">A</button>
-        <button class="btn-key">B</button>
-        <button class="btn-key">C</button>
-        <button class="btn-key">D</button>
-        <button class="btn-key">E</button>
-        <button class="btn-key">F</button>
-        <button class="btn-key">G</button>
-        <button class="btn-key">H</button>
+        <button class="btn-key">
+            <kbd>K</kbd>
+            <span>Clap</span>
+        </button>
+
+        <button class="btn-key">
+            <kbd>K</kbd>
+            <span>Hithat</span>
+        </button>
+
+        <button class="btn-key">
+            <kbd>K</kbd>
+            <span>Kick</span>
+        </button>
+
+        <button class="btn-key">
+            <kbd>K</kbd>
+            <span>Openhat</span>
+        </button>
+
+        <button class="btn-key">
+            <kbd>K</kbd>
+            <span>Boom</span>
+        </button>
+
+        <button class="btn-key">
+            <kbd>K</kbd>
+            <span>Ride</span>
+        </button>
+
+        <button class="btn-key">
+            <kbd>K</kbd>
+            <span>Snare</span>
+        </button>
+
+        <button class="btn-key">
+            <kbd>K</kbd>
+            <span>Tink</span>
+        </button>
+
+        <button class="btn-key">
+            <kbd>K</kbd>
+            <span>Tom</span>
+        </button>
     </div>
+
+    
 </body>
 
 <script>
