Update button styles in Drum Kit UI for improved visual consistency

--- a/drum_kit/index.html
+++ b/drum_kit/index.html
@@ -39,7 +39,6 @@
             padding:5px;
             min-width: 100px;
             height: auto;
-            background-color: #50a700 ;
             border: none;
             border-radius: 5px;
             color: #fff;
@@ -51,7 +50,7 @@
         span{
             font-weight: 100;
             font-size: small;
-            color: #000;
+            
         }
 
         button:hover{
@@ -66,47 +65,47 @@
 </head>
 <body>
     <div class="container">
-        <button class="btn-key">
+        <button class="btn-key" style="background-color: #c500ab;">
             <kbd>K</kbd>
             <span>Clap</span>
         </button>
 
-        <button class="btn-key">
+        <button class="btn-key" style="background-color: #8b750f;">
             <kbd>K</kbd>
             <span>Hithat</span>
         </button>
 
-        <button class="btn-key">
+        <button class="btn-key" style="background-color: #9b003b;">
             <kbd>K</kbd>
             <span>Kick</span>
         </button>
 
-        <button class="btn-key">
+        <button class="btn-key" style="background-color: #9e5f00;">
             <kbd>K</kbd>
             <span>Openhat</span>
         </button>
 
-        <button class="btn-key">
+        <button class="btn-key" style="background-color: #c50000;">
             <kbd>K</kbd>
             <span>Boom</span>
         </button>
 
-        <button class="btn-key">
+        <button class="btn-key" style="background-color: #008f94;">
             <kbd>K</kbd>
             <span>Ride</span>
         </button>
 
-        <button class="btn-key">
+        <button class="btn-key" style="background-color: #0010eb;">
             <kbd>K</kbd>
             <span>Snare</span>
         </button>
 
-        <button class="btn-key">
+        <button class="btn-key" style="background-color: #ffa600;">
             <kbd>K</kbd>
             <span>Tink</span>
         </button>
 
-        <button class="btn-key">
+        <button class="btn-key" style="background-color: #036400;">
             <kbd>K</kbd>
             <span>Tom</span>
         </button>
