--- a/drum_kit/index.html
+++ b/drum_kit/index.html
@@ -66,42 +66,42 @@
 <body>
     <div class="container">
         <button class="btn-key" style="background-color: #c500ab;">
-            <kbd>K</kbd>
+            <kbd>A</kbd>
             <span>Clap</span>
         </button>
 
         <button class="btn-key" style="background-color: #8b750f;">
-            <kbd>K</kbd>
+            <kbd>S</kbd>
             <span>Hithat</span>
         </button>
 
         <button class="btn-key" style="background-color: #9b003b;">
-            <kbd>K</kbd>
+            <kbd>D</kbd>
             <span>Kick</span>
         </button>
 
         <button class="btn-key" style="background-color: #9e5f00;">
-            <kbd>K</kbd>
+            <kbd>F</kbd>
             <span>Openhat</span>
         </button>
 
         <button class="btn-key" style="background-color: #c50000;">
-            <kbd>K</kbd>
+            <kbd>G</kbd>
             <span>Boom</span>
         </button>
 
         <button class="btn-key" style="background-color: #008f94;">
-            <kbd>K</kbd>
+            <kbd>H</kbd>
             <span>Ride</span>
         </button>
 
         <button class="btn-key" style="background-color: #0010eb;">
-            <kbd>K</kbd>
+            <kbd>J</kbd>
             <span>Snare</span>
         </button>
 
         <button class="btn-key" style="background-color: #ffa600;">
-            <kbd>K</kbd>
+            <kbd>I</kbd>
             <span>Tink</span>
         </button>
 
@@ -113,6 +113,8 @@
 
     
 </body>
+
+<audio data-key="65"
 
 <script>
 
