--- a/drum_kit/index.html
+++ b/drum_kit/index.html
@@ -44,6 +44,7 @@
             color: #fff;
             font-weight: 600;
             font-size: large;
+            box-shadow: 5px 5px 5px rgb(0, 0, 0,0.2);
             
         }
 
