--- a/drum_kit/index.html
+++ b/drum_kit/index.html
@@ -45,6 +45,7 @@
             font-weight: 600;
             font-size: large;
             box-shadow: 5px 5px 5px rgb(0, 0, 0,0.2);
+            gap: 5px;
             
         }
 
