--- a/basics/dom-manipulation.html
+++ b/basics/dom-manipulation.html
@@ -10,6 +10,9 @@
     <ul id="listItems"></ul>
     <button id="clear">Clear</button>
     <p id="remove">Remove this message</p>
+    <div class="change">
+
+    </div>
 
     <script>
       // Change the text content of the paragraph with id "hello"
@@ -21,12 +24,16 @@
       item.textContent = "Item 1";
       list.appendChild(item);
 
+        // Create another list item and append it to the list
     document.getElementById("clear").addEventListener("click", removeItem);
 
     function removeItem(){
        document.getElementById("remove").remove(); 
-
     }
+
+    //Change class name
+    document.getElementById("change").className = "newClass";
+
     </script>
   </body>
 </html>
