Added toggle functionality to show/hide information and update subproject commit reference

--- a/basics/dom-manipulation.html
+++ b/basics/dom-manipulation.html
@@ -11,8 +11,12 @@
     <button id="clear">Clear</button>
     <p id="remove">Remove this message</p>
     <div class="change">
-
     </div>
+
+<!-- Toggle button  -->
+ <p id="info">I am visible</p>
+ <button id="toggle" onclick="toggle()">Hide</button>
+
 
     <script>
       // Change the text content of the paragraph with id "hello"
@@ -33,6 +37,19 @@
 
     //Change class name
     document.getElementById("change").className = "newClass";
+
+  // Toggle visibility of an element
+  function toggle(){
+
+    const el=document.getElementById("info");
+    if(el.style.display === "none"){
+      el.style.display = "block";
+    } else {
+      el.style.display = "none";
+      document.getElementById("toggle").textContent = "Show";
+    }
+
+  }
 
     </script>
   </body>
