--- a/basics/apis.html
+++ b/basics/apis.html
@@ -3,7 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>
+fetching data from an API</title>
+<style>
+
+    body{
+        padding: 20px;
+        background-color: #f0f4f8;
+        font-family: Arial, sans-serif;
+    }
+ul{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+}
+
+    li {
+        list-style: none;
+        padding: 10px;
+        color: #fff;
+        margin: 5px 0;
+        display: flex;
+        flex-direction: column;
+        border-radius: 5px;
+        background-color: #024876;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        font-size: 16px;
+    }
+
+
+</style>
   </head>
   <body>
     <ul id="userList">
@@ -14,19 +43,24 @@
     <script>
       //fetching data from an API
 
-      fetch("https://jsonplaceholder.typicode.com/users")
-        .then((response) => response.json())
-        .then((data) => {
-            const users=document.getElementById("userList");
-            users.innerHTML = "Loading Data"; // Clear the list before adding new items
-
-          //Atterating through the API user list
-          data.forEach((user) => {
-            const li = document.createElement("li");
-            li.textContent = `${user.name}-${user.email}`;
-            users.appendChild(li);
-          })
-        });
+      try{
+         fetch("https://jsonplaceholder.typicode.com/users")
+   .then((response) => response.json())
+   .then((data) => {
+       const users=document.getElementById("userList");
+       
+     //Atterating through the API user list
+     data.forEach((user) => {
+       const li = document.createElement("li");
+       li.textContent = `${user.name}-${user.email}`;
+       users.appendChild(li);
+     })
+   });
+      }
+        catch(error){
+           userList.innerHTML = "Error fetching data";
+        }
+        
     </script>
   </body>
 </html>
