--- a/digital-clock/index.html
+++ b/digital-clock/index.html
@@ -4,14 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Clock</title>
+    <style>
+        body{
+            display: flex;
+            height: 100vh;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #00315b;
+            font-weight: 600;
+        }
+
+        #clock{
+            padding: 20px;
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 2px 5px 2px #040404a8;
+            font-size: 32px;
+            color: #00315b;
+        }
+    </style>
 </head>
 <body>
     <div id="clock">
-        
+
     </div>
 
     <script>
-
+        setInterval(()=>{
+            const now= new Date();
+            document.getElementById("clock").textContent=now.toLocaleTimeString();
+        },1000);
     </script>
 </body>
 </html>
