Adjusted media query for improved responsiveness on smaller screens

--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -75,12 +75,16 @@
         width: 100%;
       }
 
-      @media screen and (max-width: 750px) {
+      @media screen and (max-width: 900px) {
         body {
-          padding: 2px;
+          padding: 10%;
         }
         .content {
           width: 100%;
+        }
+
+        h1{
+          font-size: large;
         }
       }
     </style>
